fix alignment bug

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -40,6 +40,11 @@ body {
 
 .card {
   padding: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  min-height: 440px;
   &--orange {
     background-color: $bright-orange;
     border-top-left-radius: 0.5rem;
@@ -47,6 +52,7 @@ body {
     @media screen and (min-width: $breakpoint) {
       border-bottom-left-radius: 0.5rem;
       border-top-right-radius: 0;
+      min-height: 500px;
     } 
   }
 
@@ -77,11 +83,11 @@ h2 {
   font-family: $ff-big-shoulders-display;
   font-size: $fs-large;
   font-weight: $fw-700;
-  margin-top: 2rem;
+  // margin-top: 2rem;
 }
 
 p {
-  margin: 1rem 0 2rem 0;
+  // margin: 1rem 0 auto 0;
 }
 
 .btn {
@@ -90,6 +96,9 @@ p {
   padding: 1rem 2rem;
   border: 2px solid $white;
   border-radius: 50px;
+  // margin: auto;
+  // margin-bottom: 0;
+  align-self: flex-end;
   &--orange {
     color: $bright-orange;
     &:hover, &:focus {
